--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -59,7 +59,7 @@ function kwadrat()
 <table border="0" align="center">
 <tr><td>
 <input type  = "text" 
-       style = "width:133px"
+       style = "width:200px"
        name  = "wyswietlacz"
        size  = "16">
 </td></tr>
@@ -84,6 +84,16 @@ function kwadrat()
        name    = "/"
        value   = "/ "
        onClick = "dzialanie('/')">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
        class   = "MyNumButton"
@@ -105,6 +115,16 @@ function kwadrat()
        name    = "*"
        value   = "*"
        onClick = "dzialanie('*')">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
        class   = "MyNumButton"
@@ -126,6 +146,16 @@ function kwadrat()
        name    = "-"
        value   = "-"
        onClick = "dzialanie('-')">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
        class   = "MyNumButton"
@@ -147,9 +177,19 @@ function kwadrat()
        name    = "+"
        value   = "+"
        onClick = "dzialanie('+')">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
+<input type    = "button"
+       class   = "MyNumButton"
+       name    = ""
+       value   = ""
+       onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
-       style   = "width:132px"
+       style   = "width:200px"
        name    = "="
        value   = "="
        onClick = "oblicz()">
