--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -86,13 +86,13 @@ function kwadrat()
        onClick = "dzialanie('/')">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "sin"
+       value   = "sin"
        onClick = "">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "cos"
+       value   = "cos"
        onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
@@ -117,13 +117,13 @@ function kwadrat()
        onClick = "dzialanie('*')">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "tan"
+       value   = "tan"
        onClick = "">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "sqrt"
+       value   = "sqrt"
        onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
@@ -148,13 +148,13 @@ function kwadrat()
        onClick = "dzialanie('-')">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "log"
+       value   = "log"
        onClick = "">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "ln"
+       value   = "ln"
        onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
@@ -179,13 +179,13 @@ function kwadrat()
        onClick = "dzialanie('+')">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "pi"
+       value   = "pi"
        onClick = "">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = ""
-       value   = ""
+       name    = "e"
+       value   = "e"
        onClick = "">
 </td></tr><tr><td>
 <input type    = "button"
