Buttons' texts centered

--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -49,7 +49,7 @@ function kwadrat()
 // Koniec kodu JavaScript -->
 </script>
 <style type="text/css">
-.MyNumButton{width:30px}
+.MyNumButton{width:30px; padding: 0px 2px}
 </style>
 </head>
 <body>
