--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -98,7 +98,7 @@ function funkcja (wartosc)
        class   = "MyNumButton"
        name    = "sin"
        value   = "sin"
-       onClick = "">
+       onClick = "funkcja('Math.sin')">
 <input type    = "button"
        class   = "MyNumButton"
        name    = "cos"
