--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -103,7 +103,7 @@ function funkcja (wartosc)
        class   = "MyNumButton"
        name    = "cos"
        value   = "cos"
-       onClick = "">
+       onClick = "funkcja('Math.cos')">
 </td></tr><tr><td>
 <input type    = "button"
        class   = "MyNumButton"
