--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -129,7 +129,7 @@ function funkcja (wartosc)
        class   = "MyNumButton"
        name    = "tan"
        value   = "tan"
-       onClick = "">
+       onClick = "funkcja('Math.tan')">
 <input type    = "button"
        class   = "MyNumButton"
        name    = "sqrt"
