--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -160,7 +160,7 @@ function funkcja (wartosc)
        class   = "MyNumButton"
        name    = "log"
        value   = "log"
-       onClick = "">
+       onClick = "funkcja('Math.log10')">
 <input type    = "button"
        class   = "MyNumButton"
        name    = "ln"
