--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -165,7 +165,7 @@ function funkcja (wartosc)
        class   = "MyNumButton"
        name    = "ln"
        value   = "ln"
-       onClick = "">
+       onClick = "funkcja('Math.log')">
 </td></tr><tr><td>
 <input type    = "button"
        class   = "MyNumButton"
