--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -189,9 +189,9 @@ function funkcja (wartosc)
        onClick = "dzialanie('+')">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = "pi"
-       value   = "pi"
-       onClick = "">
+       name    = "."
+       value   = "."
+       onClick = "wprowadz('.')">
 <input type    = "button"
        class   = "MyNumButton"
        name    = "e"
