--- a/JS-22-Kalkulator/index.html
+++ b/JS-22-Kalkulator/index.html
@@ -194,9 +194,9 @@ function funkcja (wartosc)
        onClick = "wprowadz('.')">
 <input type    = "button"
        class   = "MyNumButton"
-       name    = "e"
-       value   = "e"
-       onClick = "">
+       name    = "-()"
+       value   = "-()"
+       onClick = "wprowadz('-')">
 </td></tr><tr><td>
 <input type    = "button"
        style   = "width:200px"
