Input for printing indices added

--- a/JS-23-Wyszukiwanie/index.html
+++ b/JS-23-Wyszukiwanie/index.html
@@ -44,7 +44,7 @@ function przetwarzaj (f)
     <h2>
     <textarea name = "okno_tekstowe"
               cols = "35"
-              rows = "10"></textarea>
+              rows = "15"></textarea>
     </h2>
  </td>
  <td valign="top" align="right">
@@ -63,7 +63,9 @@ function przetwarzaj (f)
     <h2>
     Podany ci±g znaków wyst±pi³ w tek¶cie:<br>
     <input type = "text" name = "ile"><br>
-    razy.
+    razy.<br><br>
+	Warto¶ci indeksów, pod którymi znaleziono ciag znaków:<br>
+	<input type = "text" name = "indeksy">
     </h2>
  </td>
 </tr>
