var indices added

--- a/JS-23-Wyszukiwanie/index.html
+++ b/JS-23-Wyszukiwanie/index.html
@@ -16,6 +16,7 @@ function przetwarzaj (f)
   var indeks = 0;
   var indeks_wystapienia = 0;
   var liczba_wystapien = 0;
+  var indices = "";
 
   while (indeks_wystapienia != -1){
     indeks_wystapienia = tekst.indexOf (ciag, indeks);
