New line with new input added

--- a/JS-24-BlokadaLiterWFormularzu/index.html
+++ b/JS-24-BlokadaLiterWFormularzu/index.html
@@ -56,7 +56,12 @@ Kod pocztowy
 <input size      ="3"
        name      ="f2"
        maxlength ="3"
-       onKeyPress="keyPress(event)">
+       onKeyPress="keyPress(event)"><br>
+Poczta
+<input size		 ="20"
+	   name		 ="f3"
+	   maxlength ="20"
+	   >
 </form>
 </body>
 </html>
